# batchrename

./: .gitignore  README.md  autogen.sh  configure.ac
osx/: Info.plist
osx/batchrenmae.xcodeproj/: project.pbxproj
osx/batchrenmae.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
osx/batchrenmae.xcodeproj/project.xcworkspace/xcuserdata/stone.xcuserdatad/: UserInterfaceState.xcuserstate
osx/batchrenmae.xcodeproj/xcuserdata/stone.xcuserdatad/xcschemes/: Batch File Name Renaming.xcscheme  batchrename_bin.xcscheme  xcschememanagement.plist
src/: Makefile.am  app.cpp  dir_scanner.cpp  dir_scanner.h  filename_matcher.cpp  filename_matcher.h  main_dlg.cpp  main_dlg.h  preview_listctrl.cpp  preview_listctrl.h  version.h
